fix: buttons column is not covered the entire height of a screen

--- a/css/3dapplier.css
+++ b/css/3dapplier.css
@@ -583,8 +583,12 @@ h3 {
 
     .functions_separated {
         flex-direction: column;
-        height: calc(100dvh - 2 * var(--panel-width));
+        height: calc(100dvh - var(--panel-width));
         margin-top: var(--panel-width);
+    }
+
+    #question {
+        margin-bottom: var(--panel-width);
     }
 
     .functions__function {
